fix for overlapping annotations

--- a/caravel/assets/visualizations/nvd3_vis.css
+++ b/caravel/assets/visualizations/nvd3_vis.css
@@ -34,7 +34,8 @@ text.nv-axislabel {
 
 div.annotation_tooltip {
   position: absolute;
-  width: 110px;
+  min-width: 100px;
+  max-width: 200px;
   min-height: 28px;
   padding: 7px;
   font: 11px sans-serif;
